--- a/ELK+Filebeat-log-solution/yamls/elasticsearch/elasticsearch-data.yaml
+++ b/ELK+Filebeat-log-solution/yamls/elasticsearch/elasticsearch-data.yaml
@@ -6,7 +6,7 @@ metadata:
     elastic-app: elasticsearch
     role: data
   name: elasticsearch-data
-  namespace: ns-elasticsearch
+  namespace: ns-es
 spec:
   replicas: 2
   revisionHistoryLimit: 10
@@ -36,17 +36,19 @@ spec:
               mountPath: /usr/share/elasticsearch/data
           env:
             - name: "cluster.name"
-              value: "elasticsearch-cluster"
+              value: "es_cluster"
             - name: "bootstrap.memory_lock"
               value: "true"
-            - name: "discovery.zen.ping.unicast.hosts"
+            - name: "discovery.seed_hosts"
               value: "elasticsearch-discovery"
             - name: "node.master"
               value: "false"
             - name: "node.data"
               value: "true"
+            - name: "node.ingest" # 官方推荐使用专门的节点用作 ingest 节点，这里用data 节点暂代
+              value: "true"
             - name: "ES_JAVA_OPTS"
-              value: "-Xms256m -Xmx256m"
+              value: "-Xms512m -Xmx512m"
           securityContext:
             privileged: true
       volumes:
@@ -64,7 +66,7 @@ metadata:
   labels:
     elastic-app: elasticsearch-service
   name: elasticsearch-service
-  namespace: ns-elasticsearch
+  namespace: ns-es
 spec:
   ports:
     - port: 9200
