--- a/ELK+Filebeat-log-solution/yamls/elasticsearch/elasticsearch-master.yaml
+++ b/ELK+Filebeat-log-solution/yamls/elasticsearch/elasticsearch-master.yaml
@@ -1,75 +1,68 @@
----
-kind: Deployment
-apiVersion: apps/v1beta2
+apiVersion: apps/v1
+kind: StatefulSet
 metadata:
   labels:
-    elastic-app: elasticsearch
+    app: elasticsearch
     role: master
   name: elasticsearch-master
-  namespace: ns-elasticsearch
+  namespace: ns-es
 spec:
-  replicas: 3
-  revisionHistoryLimit: 10
+  replicas: 2
+  serviceName: elasticsearch-master
   selector:
     matchLabels:
-      elastic-app: elasticsearch
+      app: elasticsearch
       role: master
   template:
     metadata:
       labels:
-        elastic-app: elasticsearch
+        app: elasticsearch
         role: master
     spec:
+      serviceAccountName: elasticsearch-admin
+      restartPolicy: Always
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: elasticsearch-master
           image: amazon/opendistro-for-elasticsearch:1.1.0
-          lifecycle:
-            postStart:
-              exec:
-                command: ["/bin/bash", "-c", "sysctl -w vm.max_map_count=262144; ulimit -l unlimited;"]
+          imagePullPolicy: IfNotPresent
+          securityContext:
+            privileged: true
           ports:
             - containerPort: 9200
               protocol: TCP
             - containerPort: 9300
               protocol: TCP
           env:
-            - name: "cluster.name"
-              value: "elasticsearch-cluster"
-            - name: "bootstrap.memory_lock"
+            - name: cluster.name
+              value: "es_cluster"
+            - name: node.master
               value: "true"
-            - name: "discovery.zen.ping.unicast.hosts"
-              value: "elasticsearch-discovery"
-            - name: "discovery.zen.minimum_master_nodes"
-              value: "2"
-            - name: "discovery.zen.ping_timeout"
-              value: "5s"
-            - name: "node.master"
-              value: "true"
-            - name: "node.data"
+            - name: node.data
               value: "false"
-            - name: "node.ingest"
+            - name: discovery.seed_hosts # 旧版本使用 discovery.zen.ping.unicast.hosts
+              value: "elasticsearch-discovery" # Disvocery Service
+            - name: cluster.initial_master_nodes # 初始化的 master 节点，旧版本相关配置 discovery.zen.minimum_master_nodes
+              value: "elasticsearch-master-0,elasticsearch-master-1" # 根据副本数和name配置
+            - name: node.ingest
               value: "false"
-            - name: "ES_JAVA_OPTS"
-              value: "-Xms256m -Xmx256m"
-          securityContext:
-            privileged: true
-      serviceAccountName: elasticsearch-admin
-      tolerations:
-        - key: node-role.kubernetes.io/master
-          effect: NoSchedule
-
+            - name: ES_JAVA_OPTS
+              value: "-Xms512m -Xmx512m" 
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   labels:
-    elastic-app: elasticsearch
+    app: elasticsearch
   name: elasticsearch-discovery
-  namespace: ns-elasticsearch
+  namespace: ns-es
 spec:
+  publishNotReadyAddresses: true
   ports:
-    - port: 9300
-      targetPort: 9300
+  - name: transport
+    port: 9300
+    targetPort: 9300
   selector:
-    elastic-app: elasticsearch
+    app: elasticsearch
     role: master
