--- a/installation/nginx-proxy.service
+++ b/installation/nginx-proxy.service
@@ -8,7 +8,7 @@ User=root
 PermissionsStartOnly=true
 ExecStart=/usr/bin/docker run -p 127.0.0.1:9443:6443 \
                               -v /etc/nginx:/etc/nginx \
-                              --name nginx-proxy \
+                              --name=nginx-proxy \
                               --net=host \
                               --restart=on-failure:5 \
                               --memory=512M \
