--- a/installation/nginx.conf
+++ b/installation/nginx.conf
@@ -10,9 +10,9 @@ events {
 stream {
     upstream kube_apiserver {
         least_conn;
-        server 192.168.10.50:6443;
-        server 192.168.10.51:6443;
-        server 192.168.10.52:6443;
+        server 192.168.1.131:6443;
+#        server 192.168.10.51:6443;
+#        server 192.168.10.52:6443;
     }
 
     server {
